--- a/gb/18/10/11/n10776362.md
+++ b/gb/18/10/11/n10776362.md
@@ -6,49 +6,50 @@
 <h6>陈汉典从小就喜欢唱歌、跳舞、演戏、主持及搞笑等表演，被定为“谐星”的他，出道12来始终难以忘怀唱歌跳舞这件事。（有声娱乐提供）</h6>
 <hr>
 	<p>【大纪元2018年10月11日讯】陈汉典出道至今12年，演艺工作横跨主持、电影、戏剧，一直扮演“最佳绿叶”的他，今（11）日宣布将以“跳唱歌手”的身份进军华语歌坛；不仅要拿起麦克风摇身一变成为乐坛新人，也将颠覆大家平常对他是“谐星”的印象。</p>
-<figure id="attachment_10776501" aria-describedby="caption-attachment-10776501" style="width: 458px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2018/10/1810110337421487.jpg"><img decoding="async" class=" wp-image-10776501" title="" src="https://i.epochtimes.com/assets/uploads/2018/10/1810110337421487.jpg" alt="" width="458" b="688" /></a><figcaption id="caption-attachment-10776501" class="wp-caption-text">面对唱片市场不景气，陈汉典却还是决心圆梦。（有声娱乐提供）</figcaption></figure>
+<figure id="attachment_10776501" aria-describedby="caption-attachment-10776501" style="width: 458px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2018/10/1810110337421487.jpg" rel="nofollow"><img decoding="async" class=" wp-image-10776501" title="" src="https://i.epochtimes.com/assets/uploads/2018/10/1810110337421487.jpg" alt="" width="458" b="688"></a><figcaption id="caption-attachment-10776501" class="wp-caption-text">面对唱片市场不景气，陈汉典却还是决心圆梦。（有声娱乐提供）</figcaption></figure>
 <p>陈汉典笑说，“当初决定自己发唱片时，第一时间就是告诉小S姐（徐熙娣）和康永哥，他们虽然有给我鼓励，但同时也开玩笑地跟我说：觉得我怎么会蠢到自己发唱片！但我想说的是，唱片圈越是不景气，我越要自己争气！”</p>
 <p>陈汉典一出片就决定挑战以“跳唱歌手”身份闯荡华语乐坛，他坦言，从小因为看菲哥及小哥主持的《龙兄虎弟》，开始喜欢唱歌跳舞，而且学的第一首歌就是《爱情恰恰》，也影响了他想当跳唱歌手的原因。</p>
 <p>为此，陈汉典除了找老师加强训练外，在音乐制作物、MV及企宣上可说一点都不马虎，光是这张收录两首歌的EP就让陈汉典砸下约500万（台币）制作。</p>
 <p>陈汉典首支主打同名单曲《先不要》找来金曲音乐人Matzka担任制作人，主要这张EP想走复古的唱跳模式，而Matzka本身也很会跳舞，对歌曲方向都很有想法，所以一拍即合。</p>
-<figure id="attachment_10776484" aria-describedby="caption-attachment-10776484" style="width: 453px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2018/10/1810110337451487.jpg"><img decoding="async" class=" wp-image-10776484" title="" src="https://i.epochtimes.com/assets/uploads/2018/10/1810110337451487.jpg" alt="" width="453" b="680" /></a><figcaption id="caption-attachment-10776484" class="wp-caption-text">陈汉典发片第一时间告诉小S、蔡康永，他们鼓励之余不忘调侃他：“怎么会蠢到自己发唱片！”（有声娱乐提供）</figcaption></figure>
+<figure id="attachment_10776484" aria-describedby="caption-attachment-10776484" style="width: 453px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2018/10/1810110337451487.jpg" rel="nofollow"><img decoding="async" class=" wp-image-10776484" title="" src="https://i.epochtimes.com/assets/uploads/2018/10/1810110337451487.jpg" alt="" width="453" b="680"></a><figcaption id="caption-attachment-10776484" class="wp-caption-text">陈汉典发片第一时间告诉小S、蔡康永，他们鼓励之余不忘调侃他：“怎么会蠢到自己发唱片！”（有声娱乐提供）</figcaption></figure>
 <h2>录音卡关 Matzka出绝招</h2>
-<p>有趣的是，陈汉典第一次进录音室配唱时，一开始对自己的声音很害羞，发现唱不出自己原本的声音，试了好几天还是不行，让陈汉典一开始就踢到铁板。他坦言，“一进去录音间才觉得配唱好难。”</p>
+<p>
+有趣的是，陈汉典第一次进录音室配唱时，一开始对自己的声音很害羞，发现唱不出自己原本的声音，试了好几天还是不行，让陈汉典一开始就踢到铁板。他坦言，“一进去录音间才觉得配唱好难。”</p>
 <p>后来跟Matzka研究出“导唱模式”，就是对方唱一句、他就跟着唱一句，就这样竟然录成功了。Matzka夸赞陈汉典最厉害的地方是，“他不会被我影响，还是能唱出自己的味道！”</p>
-<figure id="attachment_10776492" aria-describedby="caption-attachment-10776492" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2018/10/1810110354281487.jpg"><img decoding="async" class="size-large wp-image-10776492" title="" src="https://i.epochtimes.com/assets/uploads/2018/10/1810110354281487-600x450.jpg" alt="" width="600" b="450" /></a><figcaption id="caption-attachment-10776492" class="wp-caption-text">陈汉典（中）首支同名单曲《先不要》找来金曲音乐人Matzka（右）担任制作人。（有声娱乐提供）</figcaption></figure>
+<figure id="attachment_10776492" aria-describedby="caption-attachment-10776492" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2018/10/1810110354281487.jpg" rel="nofollow"><img decoding="async" class="size-large wp-image-10776492" title="" src="https://i.epochtimes.com/assets/uploads/2018/10/1810110354281487-600x450.jpg" alt="" width="600" b="450"></a><figcaption id="caption-attachment-10776492" class="wp-caption-text">陈汉典（中）首支同名单曲《先不要》找来金曲音乐人Matzka（右）担任制作人。（有声娱乐提供）</figcaption></figure>
 <h2>出道12年后决定付诸行动</h2>
-<p>陈汉典从小就喜欢唱歌、跳舞、演戏、主持及搞笑模仿等表演，因为天生的表演欲，让他从念书开始就参加许多不同的表演比赛，其中影响他至深《全民大闷锅—模王大赛》更一举拿下“冠军”，也因此让他一脚踏入演艺圈。</p>
+陈汉典从小就喜欢唱歌、跳舞、演戏、主持及搞笑模仿等表演，因为天生的表演欲，让他从念书开始就参加许多不同的表演比赛，其中影响他至深《全民大闷锅—模王大赛》更一举拿下“冠军”，也因此让他一脚踏入演艺圈。</p>
 <p>只是因长相而被定为“谐星”的他，始终难以忘怀唱歌跳舞这一块，一路走来一直尝试做不同领域，终于在他出道12年后决定付诸行动。“再拖下去，我应该就跳不动了！”</p>
 <p>陈汉典并笑说，要以歌喉及舞蹈让大家重新聚焦在他身上。陈汉典首张EP将于11月7日发行。</p>
 <p>责任编辑：梁梦竹</p>
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/13/6/30/n3905686.md#1">乐乐陈汉典PK舞蹈 阙小佑模仿萧煌奇</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/15/2/6/n4360742.md#1">陈汉典被讽太娇弱 下厨扳回一城</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/16/4/4/n7518125.md#1">Matzka台北开唱 林忆莲男友助阵</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/16/5/27/n7938717.md#1">陈汉典夏于乔演恋人 笑曝首场吻戏超尴尬</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/11/n14549246.md#1">担忧被裁员 Z世代最不愿在职场使用AI</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/12/n14571859.md#1">从裁员到高校课程：AI改变职场与教育</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/20/n14639479.md#1">华大人工智能计划获千万美元捐助</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639042.md#1">华州退休生活成本高居全美第五</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/20/12/8/n12602834.md#1" target="_blank">35国逾九百政要联署 谴责中共迫害法轮功</a>  </li><li><a href="https://github.com/1992513/djy/blob/master/gb/17/11/1/n9793368.md#1" target="_blank">你不了解的邓小平：与毛一同指挥大跃进（上）</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/16/3/15/n4663033.md#1" target="_blank">食道癌晚期的绝症患者获救</a></li>
+<li><a href="https://github.com/1992513/ntdtv/blob/master/gb/2022/05/01/a103414939.md#1" target="_blank">加拿大20市镇升旗亮灯 祝贺法轮大法传世30年</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/17/10/29/n9783517.md#1" target="_blank">林辉：刚正不阿包青天  中共歪批其虚伪</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/5/26/n11280869.md#1" target="_blank">谴责中共活摘器官 美密苏里州通过决议案</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/9/5/n14588482.md#1">四连血月不寻常？（1）史上最吸睛的例子</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/9/4/n14587600.md#1">英电视名人拍到UFO：金色光球在空中盘旋</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/8/n14526856.md#1">诗仙李白惊才绝艳 最高亢美妙的盛唐之音</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/23/9/7/n14068727.md#1">白露节气到 养生小心哪些禁忌“补露”怎么补？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/9/9/n14590350.md#1">组图：陪川普出席美网公开赛 14岁外孙女受瞩目</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/9/10/n14591623.md#1">【直播】听证会：反犹太主义在K-12学校蔓延</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/9/10/n14591701.md#1">【直播】美参议院听证会：美国消防设备危机</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/9/10/n14591112.md#1">【佳音时刻】习放攻台信号？被揭虚张声势</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/9/9/n14590335.md#1">习家拉拢红二代 合照流出 刘源缺席引猜测</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/9/8/n14590259.md#1">泡泡玛特股价大跌7.11% 市值蒸发295亿港元</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/9/9/n14590411.md#1">上海一麦当劳内多人躺卧过夜引热议</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/9/8/n14590261.md#1">大陆男星许凯被爆丑闻 三部待播剧岌岌可危</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/9/8/n14590210.md#1">辛芷蕾威尼斯走红毯 网纱玫瑰装饰礼服引关注</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/9/9/n14591029.md#1">陆女星毛晓彤参加活动 被意外反锁房间半小时</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/9/9/n14590995.md#1">李英爱自曝爱女外表遗传她 一直参加偶像试镜</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/9/10/n14591523.md#1">90岁台湾演员林义雄辞世 曾得金钟终身成就奖</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/9/8/n14589839.md#1">网上流传的“机场理论”挑战 会让你错过航班</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/9/9/n14590626.md#1">专家：跑步对膝盖有意想不到的好处</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/9/7/n14589287.md#1">高蛋白营养美食“豆腐玉米厚煎蛋”</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/9/10/n14591285.md#1">为何养狗的人应该穿白袜？ 专家释疑</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/9/8/n14589691.md#1">心理治疗师：压力会传染且影响他人健康</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638002.md#1">高人点化孙叔敖：谨记三条铁律，就能获得善终</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/4/n14608984.md#1">【古道人生】许多人都知道天诛 不知道地灭是怎回事</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/15/n14636582.md#1">青年建筑师创业靠信任 在纽约筑起台湾的家</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/31/n14426731.md#1">【品读唐诗】空山新雨的禅境</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/11/4/25/n3238815.md#1">安贫乐道——《后汉书》中的韦彪与杨震</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640544.md#1">【佳音时刻】胡耀邦纪念会 红二代分裂成焦点</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640558.md#1">【纪元焦点】28点计划出炉 俄乌现和平曙光？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/22/n14640667.md#1">【车评】展现Gazoo精神 2025 Toyota Corolla GR Premium Plus</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/20/n14639642.md#1">SU7争议继续发酵 小米市值蒸发逾5300亿港元</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638607.md#1">分析：农民工若大规模返贫 或将揭竿而起</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639193.md#1">分析：建立稀土供应链 西方占据两大优势</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639252.md#1">陆女星韩雪打破高冷形象 直播卖12.9元棉拖鞋</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639275.md#1">赵丽颖带儿子出门再被偷拍 工作室紧急发声</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638556.md#1">《鬼灭之刃》票房超千亿日圆 创日本影史纪录</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14638997.md#1">《魔法坏女巫2》褒贬不一 烂番茄评价出炉</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/20/n14639948.md#1">港星郑则仕曝近况 回应身材暴瘦与去世传闻</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/20/n14639533.md#1">为何飞机不直接飞到巡航高度 而是分段爬升？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639278.md#1">想要逆龄？这些抗老好物帮你保养更有效</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640625.md#1">“黑色星期五”年度优惠周11月20日提前开跑</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640269.md#1">心理学家：判断伴侣是否真正契合的两个迹象</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640311.md#1">喝茶有禁忌？ 美国医生说这样喝会伤身</a></li>
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/18/10/11/n10776362.htm">陈汉典砸重金出辑 “康熙”给鼓励也笑他蠢</a></p><hr>
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/18/10/11/n10776362.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
